  sound_falcon.c, sound_oss.c, sound.h, android/jni/sound.c, dos/atari_vga.c,
  dos/sound_dos.c, sdl/main.c, sdl/sound.[ch], win32/atari_win32.c,
  win32/sound.c, wince/port/atari_wince.c, wince/port/sound.c: Make
  Sound_Initialise fail gracefully instead of segfaulting when an option
  argument is missing. Do not initialise sound unnecessarily when the "-help"
  option is given.


2011-11-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* af80.[ch], atari.c, cartridge.[ch], devices.[ch], ide.[ch], input.c,
  pbi_bb.[ch], pbi_mio.[ch], pbi_proto80.[ch], pbi_xld.[ch], pbi.[ch],
  sdl/video.c: Add or fix Exit functions for files/resources that were not
  _explicitely_ closed/freed on exit.
  Add call to Atari800_ErrExit also when commandline-parsing fails.
  Previously when starting the dosvga target with "atari800 -artif",
  the emulator would exit without uninitialising VGA, leaving mess on screen.

* amiga/amiga.c, dc/atari_dc.c: Fix Platform_Initialise() not returning
  a value.


2011-11-04  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* monitor.c: Fix a memory leak - buffer allocated by readline() should be
  freed by user.

* configure.ac: Clean-up of SDL detection - restore the "Don't redefine main"
  snippet that got mistakenly deleted in revisions 1.108-1.109.

* configure.ac, Makefile.in, DOC/README.android: Cleanup in detection of
  libreadline and OpenGL:
  Renamed options --enable-monitor-readline and --enable-opengl to
  --with-readline and --with-opengl, respectively - Autoconf manual recommends
  the --with prefix for options requiring external software.
  Since the AC_CHECK_HEADER (used in OpenGL detection) requires proper setting
  of CPPFLAGS, rudimentary support for this variable has been added.

* sdl/video_gl.c: Fix wrong definition of "black" colour for the BGRA32 pixel
  format, which caused a visible blue border around the screen with bilinear
  filtering and stretch >= 2.


2011-10-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>